<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_about"
        app:showAsAction="never"
        android:title="@string/title_activity_about" />

    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/title_activity_settings" />

    <item
        android:id="@+id/action_auto_delete"
        app:showAsAction="never"
        android:title="@string/delete_old_notifications_title" />

    <item
        android:id="@+id/action_require_auth"
        app:showAsAction="never"
        android:title="@string/auth_option"
        android:visible="false"
        android:checkable="true" />

    <item
        android:id="@+id/action_sort_apps"
        android:title="@string/sorting_apps_title"
        app:showAsAction="never" />
</menu>
