<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_checkbox_enable_logging"
        android:title="@string/action_checkbox_enable_logging"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/action_export"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear_app"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_clear"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sorting_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_version"
        android:title="@string/version_handling_title"
        app:showAsAction="never" />

</menu>
