<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/card_enable_service_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/card_enable_service_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:background="?selectableItemBackground"
            android:layout_gravity="end"
            android:text="@string/card_enable_service_button"
            android:id="@+id/card_enable_service_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</android.support.v7.widget.CardView>