<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isListEmpty"
            type="Boolean" />

        <variable
            name="loggingDisabled"
            type="boolean" />

        <variable
            name="appTitle"
            type="String" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/app_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.appdetail.AppDetailFragment">

        <androidx.cardview.widget.CardView
            android:visibility="@{loggingDisabled ? View.VISIBLE : View.GONE}"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                android:background="?colorAccent"
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    tools:text="@string/card_logging_disabled_title"
                    android:text="@{@string/card_logging_disabled_title(appTitle)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/card_logging_disabled_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:padding="16dp"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/notification_list_empty"
            android:visibility="@{safeUnbox(isListEmpty) ? View.VISIBLE : View.GONE}"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        </FrameLayout>

    </LinearLayout>
</layout>
